# GammaRay

./: CMakeLists.txt
client/: CMakeLists.txt  clientconnectionmanager.h  gammaray_clientlib_export.h  remotemodel.h
cmake/: GammaRayMacrosInternal.cmake
common/: CMakeLists.txt
core/: CMakeLists.txt
docs/: CMakeLists.txt
launcher/: CMakeLists.txt  Info.plist.in
tests/: CMakeLists.txt
ui/: CMakeLists.txt
